--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,16 @@ on: [push]
 jobs:
   newImage:
     runs-on: self-hosted
-    name: Create a new image 
+    name: Update website
     steps:
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v4
       # Use the output from the `hello` step
-      - name: Create a new image
-        run: docker build -t web-container .
-      - name: Update the Traefik configuration
-        run: cd /var/reverse-proxy && docker compose up -d --scale web=0 && docker compose up -d --scale web=3
-      - name: Remove the old images
-        run: docker rmi `docker images --filter dangling=true -q`
+      - name: move to destination
+        run: cd /var/www/html/pariscaretaker.fr
+      - name: fetch
+        run: git fetch
+      - name: pull
+        run: git pull
