--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "guzzlehttp/guzzle": "^7.0"
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
