--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "botman/botman": "^2.8",
+        "botman/driver-web": "^1.5",
+        "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
-        "guzzlehttp/guzzle": "^7.0"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
