[ADD] planning on profile page, few ajustments on header and landing page, logos

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/smi4th/PA24-WebSite#readme",
   "dependencies": {
     "axios": "^1.6.8",
+    "fullcalendar": "^6.1.11",
     "laravel-echo": "^1.16.1",
     "pusher-js": "^8.4.0-rc2"
   },
