--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.314",
+        "barryvdh/laravel-dompdf": "^2.2",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "pusher/pusher-php-server": "^7.2"
+        "league/flysystem-aws-s3-v3": "^3.28",
+        "pusher/pusher-php-server": "^7.2",
+        "stripe/stripe-php": "^14.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
